# ProgramGames

./: .gitignore  Cargo.toml  LICENSE  PacletInfo.wl  README.md  build.wls  build_all_targets.sh  build_macos_targets.sh  ci_build.wl  zcc
.github/workflows/: build_paclet.yml
ProgramGames/: PacletInfo.wl  ResourceDefinition.nb
ProgramGames/Kernel/: CellularAutomata.wl  ComplexityLandscape.wl  Evolve.wl  FiniteStateMachines.wl  Games.wl  InitialEvaluations.wl  IteratedGame.wl  ProgramGames.wl  RuleArrays.wl  Tournament.wl  TuringMachines.wl  Visualization.wl
ProgramGames/Lib/: Cargo.toml
ProgramGames/Lib/program-games/: Cargo.toml
ProgramGames/Lib/program-games/src/: evolve.rs  gpu.rs  lib.rs  main.rs  strategy.rs  tournament.rs
ProgramGames/Lib/tm-search/: Cargo.toml
ProgramGames/Lib/tm-search/src/: gpu.rs  lib.rs  strategy.rs  tournament.rs
