[package]
name = "program-games"
version = "0.1.0"
edition = "2021"

[features]
default = ["metal"]
metal = ["dep:metal"]

[lib]
name = "program_games"
# Only cdylib: the runtime shared library Wolfram's CargoLoad dlopens.
# Dropping "lib" skips the Rust-only .rlib archive (~7 MB per target), which no
# other crate depends on in a paclet context.
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "program-games"
path = "src/main.rs"

[dependencies]
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wolfram-library-link = { git = "https://github.com/sw1sh/wolfram-library-link-rs", branch = "feature/optional_wstp" }
clap = { version = "4.4", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.29", optional = true }
