[package]
name = "tm-search"
version = "0.1.0"
edition = "2021"

[features]
default = ["metal"]
metal = ["dep:metal"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.29", optional = true }

[profile.release]
lto = "thin"
opt-level = 3
