[package]
name = "tm-search"
version = "0.1.0"
edition = "2021"

[features]
default = ["metal"]
metal = ["dep:metal"]

[lib]
name = "tm_search"
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"

[[bin]]
name = "tm-search"
path = "src/main.rs"

[dependencies]
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wolfram-library-link = { git = "https://github.com/sw1sh/wolfram-library-link-rs", branch = "feature/optional_wstp" }
clap = { version = "4.4", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.29", optional = true }

[profile.release]
lto = "thin"
opt-level = 3
